# ADF_website

./: .env  .gitignore  .gitmodules  README.md  docker-compose.yml
asr/: Dockerfile  docker-compose.yml  test_api.py  whisper_fastapi.py
cm/: test__api.py
cm/AASIST-infer/: Dockerfile  aasist_fastapi.py  docker-compose.yml  env_script.sh  pyproject.toml
cm/AASIST-infer/code/: data_utils_SSL.py  model.py
cm/AASIST-infer/models/: best.pth
cm/AASIST-infer/pretrained/: fairseq_xlsr2_300m.pt
cm/MFA-Conformer-infer/: Dockerfile  docker-compose.yml  infer_onlyone.py  mfa_fastapi.py  pyproject.toml
cm/MFA-Conformer-infer/checkpoints/MLAADv8_LayerwiseConformerClassifier_20260123_231333/: best_checkpoint.pt  latest_checkpoint.pt
cm/MFA-Conformer-infer/src/data/: dataset.py
cm/MFA-Conformer-infer/src/models/: conformer.py
cm/MFA-Conformer-infer/src/utils/: validation.py
cm/SpeechPrompt-infer/: Dockerfile  config.yaml  docker-compose.yml  pyproject.toml  speechprompt_fastapi.py
cm/SpeechPrompt-infer/checkpoints/: base_prompt_model.pt  checkpoint_best.pt
cm/SpeechPrompt-infer/code/fairseq_usr/: loss.py  model.py  task.py
cm/SpeechPrompt-infer/code/speech2unit/: hubert_feature_reader.py
cm/SpeechPrompt-infer/data/: verbalizer.json
cm/SpeechPrompt-infer/pretrained/: hubert_base_ls960.pt
frontend/: .dockerignore  .env.local  .gitignore  Dockerfile  README.md  docker-compose-dev.yml  docker-compose.yml  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/asr/: route.ts
frontend/app/api/close-all/: route.ts
frontend/app/api/detect/: route.ts
frontend/app/api/status/: route.ts
frontend/app/api/tts/: route.ts
frontend/components/: AudioRecorder.tsx  ConfidenceMatrix.tsx  ModelStatusPanel.tsx  TTSControls.tsx
frontend/lib/: api.ts  backend.ts  modelState.ts
