[project]
name = "aasist-infer"
version = "1.0.0"
description = "AASIST inference-only service for deepfake audio detection"
requires-python = "==3.9.*"
dependencies = [
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "librosa>=0.9.1",
    "numpy<2.0.0",
    "soundfile",
    "scipy",
    "tqdm",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    # fairseq deps (installed separately with --no-deps)
    "omegaconf<2.1",
    "hydra-core>=1.0.7,<1.1",
    "bitarray",
    "regex",
    "sacrebleu",
]

[tool.uv]
managed = true

[tool.uv.sources]
torch      = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url  = "https://download.pytorch.org/whl/cu128"
explicit = true
