[project]
name = "speechprompt-v2"
version = "0.1.0"
description = "SpeechPrompt v2 transition to uv"
readme = "README.md"
requires-python = "==3.9.*"
dependencies = [
    "torch==2.5.1",
    "torchvision==0.20.1",
    "torchaudio==2.5.1",
    "librosa==0.10.1",
    "numpy==1.26.2",
    "numba==0.59.1",
    "pandas==2.2.0",
    "scipy==1.11.4",
    "scikit-learn==1.3.2",
    "matplotlib==3.8.2",
    "seaborn",
    "tensorboard==2.15.1",
    "tensorboardx==2.6.2.2",
    "tqdm==4.66.1",
    "regex==2025.7.34",
    "editdistance==0.6.2",
    "jiwer==3.0.5",
    "sacrebleu==2.4.0",
    "sacremoses==0.1.1",
    "gitpython==3.1.40",
    "ipykernel==6.30.1",
    "jupyterlab==4.0.9",
    "soundfile==0.12.1",
    "audioread==3.0.1",
    "bitarray==2.9.2",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.2",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    "joblib>=1.3.0",
    "setuptools<71",
]

[tool.uv]
managed = true

[tool.uv.sources]
# Using the index defined below for CUDA 12.4
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
